--- a/src/_includes/stylesheets/.vertical/horizontal.css
+++ b/src/_includes/stylesheets/.vertical/horizontal.css
@@ -32,7 +32,6 @@ p.vertical {
   margin: 1em 0;
 
   width: 100%;
-  height: max-content;
 
   max-height: min(
     max(
